# cython-cmake-example

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.pyx
